syntax = "proto3";

package v1;

import "storage/external_backup.proto";

option go_package = "v1";
option java_package = "io.stackrox.proto.api.v1";

message IntegrationAsConfiguration {
  oneof config {
    storage.ExternalBackup external_backup = 1;
  }
}
